@@ -6,6 +6,7 @@
 	all else failed -- forego the small, complicating optimization.
 	* src/color.c (color_update): Strip things bare to see the sameness.
 	* src/color.c (found_in_list): Factor out this triple repetition.
+	* src/color.c (color_update): Rename a variable for conciseness.
 
 GNU nano 2.5.3 - 2016.02.25
 
